@@ -117,8 +117,8 @@ class EnginePoll(Engine):
 
         # run main event loop...
         while self.evlooprefcnt > 0:
-            self._debug("LOOP evlooprefcnt=%d (reg_clients=%s) (timers=%d)" % \
-                    (self.evlooprefcnt, self.reg_clients.keys(), len(self.timerq)))
+            self._debug("LOOP evlooprefcnt=%d (reg_clifds=%s) (timers=%d)" % \
+                    (self.evlooprefcnt, self.reg_clifds.keys(), len(self.timerq)))
             try:
                 timeo = self.timerq.nextfire_delay()
                 if timeout > 0 and timeo >= timeout:
@@ -128,7 +128,7 @@ class EnginePoll(Engine):
                 elif timeo == -1:
                     timeo = timeout
 
-                self.reg_clients_changed = False
+                self.reg_clifds_changed = False
                 evlist = self.polling.poll(timeo * 1000.0 + 1.0)
 
             except select.error, (ex_errno, ex_strerror):
@@ -145,16 +145,16 @@ class EnginePoll(Engine):
                 if event & select.POLLNVAL:
                     raise EngineException("Caught POLLNVAL on fd %d" % fd)
 
-                if self.reg_clients_changed:
+                if self.reg_clifds_changed:
                     self._debug("REG CLIENTS CHANGED - Aborting current evlist")
                     # Oops, reconsider evlist by calling poll() again.
                     break
 
                 # get client instance
-                if not self.reg_clients.has_key(fd):
+                if not self.reg_clifds.has_key(fd):
                     continue
 
-                client = self.reg_clients[fd]
+                client = self.reg_clifds[fd]
 
                 # process this client
                 client._processing = True
@@ -207,8 +207,8 @@ class EnginePoll(Engine):
             # process clients timeout
             self.fire_timers()
 
-        self._debug("LOOP EXIT evlooprefcnt=%d (reg_clients=%s) (timers=%d)" % \
-                (self.evlooprefcnt, self.reg_clients, len(self.timerq)))
+        self._debug("LOOP EXIT evlooprefcnt=%d (reg_clifds=%s) (timers=%d)" % \
+                (self.evlooprefcnt, self.reg_clifds, len(self.timerq)))
 
     def exited(self):
         """
