@@ -1,3 +1,9 @@
+2009-08-08 S. Thiell <stephane.thiell@cea.fr>
+
+	* Engine: fix fanout definition and set it as the max number of
+	concurrent running engine clients (EngineClient), and not FDs (trac
+	ticket #33).
+
 2009-08-03 S. Thiell <stephane.thiell@cea.fr>
 
 	* Version 1.1 RC 5 released.
